# spellcast

./: Cargo.toml  LICENSE  README.md
src/: is.rs  lib.rs  object.rs
src/convert/: convert_.rs  try_convert.rs
src/downcast/: downcast_.rs  downcast_from.rs  downcast_from_ref.rs  downcast_ref.rs
src/dyncast/: mod.rs
src/dyncast/dyncast_obj/: as_dyncast_obj.rs  into_dyncast_obj.rs  try_as_dyncast_obj.rs  try_into_dyncast_obj.rs
src/upcast/: upcast_from.rs
src/veecast/: veecast_.rs  veecast_ref.rs
